tratamento de erros em mapeamentos usuarios e estilos